# coord-rs

./: .clog.toml  .travis.yml  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
ref/: mgrs2.js  progress.ods
src/: accuracy.rs  ascii.rs  band.rs  col.rs  datum.rs  errors.rs  gzd.rs  hemisphere.rs  latlon.rs  lib.rs  macros.rs  mgrs.rs  parser.rs  row.rs  utm.rs
src/letters/: col.rs  mod.rs  row.rs  zone.rs
tests/: mgrs_to_ll.rs
