[package]

name = "mgrs"
version = "0.1.0"
authors = ["Kevin K. <kbknapp@gmail.com>"]
exclude = ["tests/*", "benches/*", "*.png"]
description = "a library for converting between Latitude / Longitude and MGRS"
repository = "https://github.com/kbknapp/mgrs-rs.git"
documentation = "http://kbknapp.github.io/mgrs-rs"
readme = "README.md"
license = "MIT"
keywords = ["mgrs", "lat", "lon", "latitude", "longitude"]

[dependencies]
clippy    = { version = "~0.0.32", optional = true }

[features]
default     = []
lints       = ["clippy", "nightly"]
nightly     = [] # for building with nightly and unstable features
unstable    = ["lints", "nightly"] # for building with travis-cargo
debug       = [] # for building with debug messages
