[package]

name = "coord"
version = "0.1.0"
authors = ["Kevin K. <kbknapp@gmail.com>"]
exclude = ["tests/*", "benches/*", "*.png"]
description = "a library for converting between coordinate types of UTM, MGRS, and Latitude / Longitude"
repository = "https://github.com/kbknapp/coord-rs.git"
documentation = "http://kbknapp.github.io/coord-rs"
readme = "README.md"
license = "MIT"
keywords = ["mgrs", "utm", "coordinate", "latitude", "longitude"]

[dependencies]
clippy    = { version = "~0.0.32", optional = true }

[features]
default     = []
lints       = ["clippy", "nightly"]
nightly     = [] # for building with nightly and unstable features
unstable    = ["lints", "nightly"] # for building with travis-cargo
debug       = [] # for building with debug messages
